--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,4 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.7.3
 	adafruit/MAX6675 library@^1.1.0
 	br3ttb/PID@^1.2.1
+	br3ttb/PID-AutoTune@0.0.0-alpha+sha.7c03cf3e7c
